# trading-strategy

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.toml  configuration.py  local-copy.csv  pyproject.toml  requirements.lock.txt  requirements.txt  roadmap  utils.py
.devcontainer/: devcontainer.json
API/: fetch_data.py
optimization/: fibonacci_retracements.py  rsi.py  stochastic_oscillator.py
plot/: ema_crossover.py  fibonacci_retracements.py  price.py  rsi.py  settings.py  signals.py  stochastic_oscillator_crossover.py
repositories/: fetch_data.py
repositories/data/: signal.py  stochastic_oscillator.py  stock.py
src/trading_strategy/: __init__.py  app.py  utils.py
src/trading_strategy/API/: fetch_data.py
src/trading_strategy/config/: config_parser.py  config_spec.py
src/trading_strategy/datetime/: __init__.py  datetime_helper.py
src/trading_strategy/logging/: __init__.py  log_helper.py
src/trading_strategy/optimizations/: __init__.py  fibonacci_retracements.py  rsi.py  stochastic_oscillator.py
src/trading_strategy/plots/: ema_crossover.py  fibonacci_retracements.py  price.py  rsi.py  stochastic_oscillator_crossover.py
src/trading_strategy/test/: ggal.csv
src/trading_strategy/trading/: __init__.py  ema_crossover.py
test/: amzn.csv  rsi.csv
trading/: ema_crossover.py  ema_crossover_strategy.py  ewm_crossover_strategy.py  sma_crossover_strategy.py  tendency.py  trading_strategy.py
utils/: ewm.py  sma.py
visualization/: ema_crossover.py  ewm_crossover_signals.py  price.py  sma_crossover_signals.py  stochastic_oscillator_crossover.py  stochastic_oscillator_signals.py  utils.py
