[project]
authors = [{ name = "martinhadid", email = "martinhadid@gmail.com" }]
dependencies = [
    "dacite>=1.9.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
    "yfinance>=0.2.52",
]
description = "Add your description here"
name = "trading-strategy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["pre-commit>=4.1.0"]

[project.scripts]
app = "trading_strategy.app:main"
