[project]
authors = [{ name = "martinhadid", email = "martinhadid@gmail.com" }]
dependencies = [
    "dacite>=1.9.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "streamlit>=1.45.0",
    "yfinance>=0.2.57",
]
description = "Add your description here"
name = "trading-strategy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[project.scripts]
app = "trading_strategy.app:main"
