[project]
authors = [{ name = "martinhadid", email = "martinhadid@gmail.com" }]
dependencies = [
    "dacite>=1.9.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "streamlit>=1.45.0",
    "yfinance>=0.2.57",
]
description = "Add your description here"
name = "trading-strategy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "ty>=0.0.1a8",
]


[tool.pydoclint]
allow-init-docstring = true
style = "google"

[tool.ruff]
line-length = 88
select = ["T201"] # flag print statements

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["D"]

[tool.pytest.ini_options]
testpaths = ["src/**/*_test.py"]

[tool.coverage.run]
branch = true
omit = ["*_test.py"]

[project.scripts]
app = "trading_strategy.app:main"
